--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -28,28 +28,28 @@ logging.level.org.hibernate=TRACE
 logging.level.ru.practicum=DEBUG
 logging.level.org.springframework.validation=TRACE
 
-server.error.include-stacktrace=always
-server.error.include-message=always
-server.tomcat.max-http-form-post-size=-1
-spring.servlet.multipart.max-request-size=10MB
+# server.error.include-stacktrace=always
+# server.error.include-message=always
+# server.tomcat.max-http-form-post-size=-1
+# spring.servlet.multipart.max-request-size=10MB
 
 # H2 Database (in-memory)
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
 
 # H2 Console (optional)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
 # JPA (test-specific settings)
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.open-in-view=false
-spring.jackson.serialization.fail-on-empty-beans=false
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# spring.jpa.open-in-view=false
+# spring.jackson.serialization.fail-on-empty-beans=false
 
 # ????????? ??
 spring.datasource.driverClassName=org.h2.Driver
