--- a/server/pom.xml
+++ b/server/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- Development tools -->
         <dependency>
