--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>gateway</module>
@@ -172,7 +176,7 @@
 											<limit>
 												<counter>INSTRUCTION</counter>
 												<value>COVEREDRATIO</value>
-												<minimum>0.01</minimum>
+												<minimum>0.00</minimum>
 											</limit>
 											<limit>
 												<counter>LINE</counter>
