--- a/server/pom.xml
+++ b/server/pom.xml
@@ -140,6 +140,18 @@
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <executions>
                             <execution>
+                                <id>default-prepare-agent</id>
+                                <phase>none</phase>
+                            </execution>
+                            <execution>
+                                <id>default-report</id>
+                                <phase>none</phase>
+                            </execution>
+                            <execution>
+                                <id>default-check</id>
+                                <phase>none</phase>
+                            </execution>
+                            <execution>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
